<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.example.anand.sqlitedemo.PationtAdmitForm">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_caseId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_case_id" />

        <EditText
            android:id="@+id/et_pationtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/PationtName" />

        <EditText
            android:id="@+id/et_ageDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/age"
            android:inputType="numberSigned" />

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_male" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_female" />

        </RadioGroup>

        <Spinner
            android:id="@+id/sp_Desease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

        </Spinner>

        <AutoCompleteTextView
            android:id="@+id/sp_DoctorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/dName">

        </AutoCompleteTextView>

        <ExpandableListView
            android:id="@+id/exlv_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

        </ExpandableListView>

        <EditText
            android:id="@+id/et_contactNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/cNo" />

        <EditText
            android:id="@+id/et_Charges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/et_insertReccord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_blue_bright"
            android:padding="5dp"
            android:text="@string/insert_record"
            android:textAllCaps="false"
            android:textSize="18dp" />
    </LinearLayout>
    </ScrollView>
    <!--<Spinner
        android:id="@+id/sp_Room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_doctorName">
    </Spinner>-->

</RelativeLayout>